Ensure key field names are not null, some tidying